--- a/angular/bower.json
+++ b/angular/bower.json
@@ -3,7 +3,7 @@
   "version": "1.0",
   "homepage": "https://github/gudfud/foodie",
   "authors": [
-    "bcamargo <bcamargo@serempre.com>"
+    "billy <billy@quierogudfud.com>"
   ],
   "description": "foodie for gudfud",
   "license": "MIT",
@@ -14,5 +14,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.3.13"
+  }
 }
