--- a/angular/bower.json
+++ b/angular/bower.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "angular": "~1.3.13",
     "oauth.io": "~0.4.0",
-    "angular-ui-router": "~0.2.13"
+    "angular-ui-router": "~0.2.13",
+    "angular-material": "master"
   }
 }
