--- a/angular/package.json
+++ b/angular/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uakari",
+  "name": "foodie",
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.5",
@@ -13,7 +13,7 @@
     "grunt-contrib-imagemin": "~0.1.2",
     "grunt-contrib-jade": "^0.13.0",
     "grunt-contrib-jshint": "~0.3.0",
-    "grunt-contrib-sass": "^0.8.1",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "~0.2.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-google-cdn": "~0.1.1",
